[gd_scene load_steps=2 format=2]

[ext_resource path="res://TypeLine.gd" type="Script" id=1]

[node name="TypeLine" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = -280.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ButtonType" type="Button" parent="."]
margin_right = 106.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
toggle_mode = true
text = "type"

[node name="Amount" type="Label" parent="."]
margin_left = 110.0
margin_top = 5.0
margin_right = 251.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "0"

[node name="ReferenceRect" type="ReferenceRect" parent="Amount"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCompute" type="Button" parent="."]
margin_left = 255.0
margin_right = 326.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "compute"

[node name="TimeTaken" type="Label" parent="."]
margin_left = 330.0
margin_top = 5.0
margin_right = 613.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="ReferenceRect" type="ReferenceRect" parent="TimeTaken"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemoryTaken" type="LineEdit" parent="."]
margin_left = 617.0
margin_right = 723.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
align = 2
editable = false

[node name="LinePerObject" type="LineEdit" parent="."]
margin_left = 727.0
margin_right = 798.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 2
editable = false
